<resources>
    <string name="app_name">My Application</string>
    <string name="Curry">Curry Chicken</string>
    <string name="KamHeong">Kam Heong Chicken</string>
    <string name="Steam">Steam Fish</string>
    <string name="Sambal">Sambal Fish</string>
    <string name="Chilli">Chilli Prawn</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Onion">Onion Prawn</string>
    <string name="SaltedEgg">Salted Egg Prawn</string>
    <string name="Please">Please Select a Rating From 1 to 5:</string>
    <string name="PleaseReview">Please leave a Review here:</string>
    <string name="MealOdering">Meal Ordering</string>
    <string name="SweetSour"><![CDATA[Sweet & Sour chicken]]></string>
    <string name="CurryFish">Curry Fish</string>
    <string name="TQ">Thank you for using our service!</string>
    <string name="stringPayment">Please enter full amount or pay during dine in:</string>
</resources>
