<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealOrdering">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/ViewMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/MealOdering"
                android:textSize="30sp" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="Menu"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:text="Price (RM)"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="Quantity"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/Chicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="Chicken"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/SweetSour" />

            <TextView
                android:id="@+id/rate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="29.90" />

            <EditText
                android:id="@+id/q1"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="20"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/Curry" />

            <TextView
                android:id="@+id/rate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="39.90" />

            <EditText
                android:id="@+id/q2"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="20"
                android:inputType="number" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/Fish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="Fish"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/Steam" />

            <TextView
                android:id="@+id/rate3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="59.90" />

            <EditText
                android:id="@+id/q3"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="20"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/Curry" />

            <TextView
                android:id="@+id/rate4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="70.90" />

            <EditText
                android:id="@+id/q4"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="20"
                android:inputType="number" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/Prawn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="Prawn"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/Chilli" />

            <TextView
                android:id="@+id/rate5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="60.90" />

            <EditText
                android:id="@+id/q5"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="20"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:text="@string/Onion" />

            <TextView
                android:id="@+id/rate6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="55.90" />

            <EditText
                android:id="@+id/q6"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_weight="20"
                android:inputType="number" />
        </TableRow>

        <Button
            android:id="@+id/btnMakePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Order" />


        <TableRow>
            <TextView
                android:id="@+id/totalItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>